# ratio

./: Cargo.toml  README.md  ratio.example.toml
crates/ratio/: Cargo.toml
crates/ratio/src/: config.rs  lib.rs  main.rs  orchestrator.rs  protocol.rs  session.rs  subprocess.rs
crates/ratio/src/ui/: app.rs  events.rs  mod.rs  render.rs  widgets.rs
examples/: fullstack-stakeholders.toml
