[workspace]
members = [
    "crates/ratio",
    "vendor/acp-rust-sdk/src/agent-client-protocol",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# ── ACP protocol (vendored) ─────────────────────────────────
agent-client-protocol = { path = "vendor/acp-rust-sdk/src/agent-client-protocol", features = ["unstable"] }

# These are required by the vendored ACP crate (it uses workspace = true)
agent-client-protocol-schema = { version = "=0.10.8" }
async-broadcast = "0.7"
derive_more = { version = "2", features = ["from"] }
log = "0.4"

# ── Async runtime ───────────────────────────────────────────
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

# ── Serialization ───────────────────────────────────────────
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["raw_value"] }
toml = "0.8"

# ── Error handling ──────────────────────────────────────────
anyhow = "1.0"
thiserror = "2.0"

# ── Async traits ────────────────────────────────────────────
async-trait = "0.1"

# ── TUI / terminal ─────────────────────────────────────────
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }

# ── Logging / tracing ──────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── CLI ─────────────────────────────────────────────────────
clap = { version = "4.5", features = ["derive"] }

# ── Time ────────────────────────────────────────────────────
chrono = "0.4"

# ── UUID ────────────────────────────────────────────────────
uuid = { version = "1.18", features = ["v4"] }

# ── Testing (needed by vendored ACP crate dev-deps) ────────
env_logger = "0.11"
futures-util = { version = "0.3", features = ["io"] }
piper = "0.2"
pretty_assertions = "1"
rustyline = "17"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
let-underscore = "warn"
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"
