[package]
name = "ra"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LLM agent orchestrator: reviewer-driven code generation via ACP and opencode"

[[bin]]
name = "ra"
path = "src/main.rs"

[dependencies]
agent-client-protocol.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
chrono.workspace = true
uuid.workspace = true
